# typely

./: PRD.md  README.md  REVIEW.md  pyproject.toml
.hypothesis/constants/: 0296da7a546db029  0dc9456c9cfef92d  213bb476e39b0ab2  28ce68a5ece74542  449f6d25a5c85f05  583df9946785e8e9  6f97e4fdfd1b43cd  eb9213125ae717f7
src/typely/: __init__.py  check.py  coerce.py  errors.py  schema.py  types.py  validate.py  validators.py
src/typely.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_adversarial.py  test_check.py  test_coerce.py  test_integration.py  test_round2.py  test_schema.py  test_types.py  test_validate.py  test_validators.py
