[project]
name = "typely"
version = "0.5.0"
description = "Runtime type validation for Python — lightweight, fast, decorator-based"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
authors = [{name = "Ravi Teja Prabhala Venkata", email = "raviteja.prabhala@gmail.com"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
